--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build
         run: chmod +x ./gradlew && ./gradlew setupCiWorkspace && ./gradlew build 
       - name: Rename build artifacts
-        run: mv build/libs/FDPClient-*.jar build/libs/FDPClient-build.jar
+        run: mv build/libs/GamingChairClient-*.jar build/libs/GamingChairClient-build.jar
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: FDPClient
-          path: build/libs/FDPClient-build.jar
+          name: GamingChairClient
+          path: build/libs/GamingChairClient-build.jar
