--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build
         run: chmod +x ./gradlew && ./gradlew setupCiWorkspace && ./gradlew build 
       - name: Rename build artifacts
-        run: mv build/libs/GamingChairClient-*.jar build/libs/GamingChairClient-`git rev-parse --short "$GITHUB_SHA"`.jar
+        run: mv build/libs/GamingChairClient-*.jar build/libs/GamingChairClient-$(git rev-parse --short "$GITHUB_SHA").jar
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: GamingChairClient
-          path: build/libs/GamingChairClient-`git rev-parse --short "$GITHUB_SHA"`.jar
+          path: build/libs/GamingChairClient-*.jar
